--- a/index.html
+++ b/index.html
@@ -64,17 +64,54 @@
     .btn img{ width:20px; height:20px; transition: transform .25s ease }
     .btn-ghost{ color:var(--text); padding:10px 12px; border-radius:10px; border:1px solid rgba(255,255,255,.10); background:rgba(255,255,255,.04) }
     .btn-ghost:hover img{ transform: translateX(6px) rotate(10deg) }
-    .btn-resume{ --r:16px; position:relative; border-radius:var(--r); padding:2px; color:var(--text);
-      background:linear-gradient(90deg,#fff,rgba(255,255,255,.35),rgba(255,255,255,.1),rgba(255,255,255,.35),#fff);
-      background-size:300% 100%; animation:strokeSweep 6s linear infinite; box-shadow:0 8px 24px rgba(0,0,0,.25);
+
+    /*
+      Resume button — glossy, rounded, with animated border and shine.
+      Uses CSS vars so we can reuse it in compact contexts (nav/footer).
+    */
+    .btn-resume{
+      /* sizing */
+      --h: 76px;           /* overall height */
+      --px: 36px;          /* horizontal padding inside */
+      --fs: 36px;          /* font size */
+      --r: 38px;           /* corner radius */
+      position: relative; display: inline-block; color: var(--text); text-decoration: none;
+      border-radius: var(--r); padding: 3px; isolation: isolate;
+      /* soft white stroke with subtle sweep */
+      background:
+        radial-gradient(100% 100% at 50% -60%, rgba(255,255,255,.45), rgba(255,255,255,.08) 60%) top/100% 100% no-repeat,
+        linear-gradient(90deg, rgba(255,255,255,.85), rgba(255,255,255,.25), rgba(255,255,255,.12), rgba(255,255,255,.25), rgba(255,255,255,.85));
+      background-size: 100% 100%, 300% 100%;
+      animation: resumeStroke 6s linear infinite;
+      box-shadow: 0 10px 28px rgba(0,0,0,.35), inset 0 0 0 1px rgba(255,255,255,.06);
     }
-    .btn-resume>span{ display:flex; align-items:center; gap:10px; padding:12px 18px; border-radius:calc(var(--r) - 2px);
-      background: radial-gradient(180px 180px at 50% -60%, rgba(255,255,255,.18), rgba(255,255,255,0) 60%), linear-gradient(#2c2c2c,#282828);
-      font-weight:700; letter-spacing:.4px;
+    .btn-resume>span{
+      position: relative; display:flex; align-items:center; justify-content:center; gap:18px;
+      height: calc(var(--h) - 6px); padding: 0 var(--px);
+      border-radius: calc(var(--r) - 3px);
+      font-weight: 900; letter-spacing: .12em; font-size: var(--fs);
+      background:
+        radial-gradient(260px 180px at 50% -70%, rgba(255,255,255,.22), rgba(255,255,255,0) 60%),
+        linear-gradient(180deg, #313131, #2b2b2b 48%, #262626);
+      box-shadow: inset 0 1px 0 rgba(255,255,255,.06), inset 0 -8px 22px rgba(0,0,0,.45);
+      overflow: hidden;
     }
-    .btn-resume img{ width:22px; height:22px }
-    .btn-resume:hover img{ transform: translateY(-2px) rotate(-12deg) scale(1.08) }
-    @keyframes strokeSweep{0%{background-position:0 0}100%{background-position:300% 0}}
+    /* moving shine on hover */
+    .btn-resume>span::after{
+      content:""; position:absolute; inset:-40% -120% -40% auto;
+      background:linear-gradient(100deg, transparent 35%, rgba(255,255,255,.65) 50%, transparent 65%);
+      transform: translateX(-60%);
+      transition: transform .9s cubic-bezier(.22,.8,.22,1);
+      pointer-events:none;
+    }
+    .btn-resume:hover>span::after{ transform: translateX(120%) }
+    .btn-resume img{ width:40px; height:40px; filter: drop-shadow(0 2px 0 rgba(0,0,0,.3)); transition: transform .35s ease, filter .35s ease }
+    .btn-resume:hover img{ transform: translateY(-3px) rotate(-10deg) scale(1.06); filter: drop-shadow(0 6px 10px rgba(0,0,0,.45)) }
+    @keyframes resumeStroke{ from{ background-position: 0 0, 0 0 } to{ background-position: 0 0, 300% 0 } }
+
+    /* compact variant for nav/footer */
+    .btn-resume.compact{ --h: 50px; --px: 18px; --fs: 18px; --r: 14px }
+    .btn-resume.compact img{ width:22px; height:22px }
 
     /* ===== Role marquee ===== */
     .marquee-wrap{ margin-top:32px }
@@ -243,7 +280,7 @@
 
       <div class="actions">
         <a class="btn btn-ghost" href="#contact">Get In Touch <img src="assets/getintouch_icon.svg" alt=""></a>
-        <a class="btn btn-resume" href="resume.pdf" target="_blank" rel="noopener"><span>RESUME <img src="assets/resume_icon.svg" alt=""></span></a>
+        <a class="btn btn-resume compact" href="resume.pdf" target="_blank" rel="noopener"><span>RESUME <img src="assets/resume_icon.svg" alt=""></span></a>
       </div>
     </nav>
   </div>
@@ -339,7 +376,7 @@
     <!-- ===== Footer ===== -->
     <footer id="contact">
       <a class="btn btn-ghost" href="mailto:hi@buildwithsam.work">Get In Touch <img src="assets/getintouch_icon.svg" alt=""></a>
-      <a class="btn btn-resume" href="resume.pdf" target="_blank" rel="noopener"><span>RESUME <img src="assets/resume_icon.svg" alt=""></span></a>
+      <a class="btn btn-resume compact" href="resume.pdf" target="_blank" rel="noopener"><span>RESUME <img src="assets/resume_icon.svg" alt=""></span></a>
     </footer>
   </main>
 
