fix: corrected One Project One Payment card link

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <!-- Cards (single row) -->
   <div class="cards">
     <a class="card" href="https://www.behance.net/gallery/193478235/Sahayata-Setu-App-Case-Study" target="_blank" rel="noopener"><img src="assets/1st_card.png" alt="Sahayata Setu case study"></a>
-    <a class="card" href="OneProjectOnePayment/index.html" target="_blank" rel="noopener"><img src="assets/one_project_one_payment.png" alt="One Project, One Payment"></a>
+    <a class="card" href="/one-project-one-payment/"><img src="assets/one_project_one_payment.png" alt="One Project, One Payment"></a>
     <a class="card" href="https://www.behance.net/gallery/194370685/f16s-Logo-and-Brand-Design" target="_blank" rel="noopener"><img src="assets/3rd_card.png" alt="f16s — Logo & Brand"></a>
   </div>
 
