feat: update One Project One Payment page

--- a/one-project-one-payment/index.html
+++ b/one-project-one-payment/index.html
@@ -189,7 +189,7 @@
         <div class="metrics">
           <div class="metric">
             <div class="big">+233%</div>
-            <div class="small">Orders/Month (600 → 2,000)</div>
+            <div class="small">Orders/Month</div>
             <div class="arrow-wrap"><img src="assets/side_arrow.svg" alt=""></div>
           </div>
           <div class="metric">
@@ -243,7 +243,7 @@
 
     <h3 class="case-h2 green">IMPACT (S)</h3>
     <div class="impact-row">
-      <div class="impact-card"><div class="impact-big">+233%</div><div class="impact-small">Orders/Month (600 → 2,000)</div><img class="impact-arrow" src="assets/side_arrow.svg" alt=""></div>
+      <div class="impact-card"><div class="impact-big">+233%</div><div class="impact-small">Orders/Month</div><img class="impact-arrow" src="assets/side_arrow.svg" alt=""></div>
       <div class="impact-card"><div class="impact-big">+276%</div><div class="impact-small">Platform Order Rate</div><img class="impact-arrow" src="assets/side_arrow.svg" alt=""></div>
       <div class="impact-card"><div class="impact-big">+6.8%</div><div class="impact-small">Avg MoM Growth</div><img class="impact-arrow" src="assets/side_arrow.svg" alt=""></div>
     </div>
@@ -268,7 +268,7 @@
         <table class="kpi" aria-label="North Star & KPIs">
           <thead><tr><th>Metric</th><th>Baseline</th><th>Target</th><th>Why It Matters</th></tr></thead>
           <tbody>
-            <tr><td>Orders/Month</td><td>600</td><td>1800</td><td>Growth, Adoption</td></tr>
+            <tr><td>Orders/Month</td><td>x</td><td>3x</td><td>Growth, Adoption</td></tr>
             <tr><td>Cart→Paid Conversion</td><td>0%</td><td>80%+</td><td>Unified Tracking</td></tr>
             <tr><td>Assembly+Parts (On Fab Projects)</td><td>0%</td><td>45%+</td><td>Checkout Efficiency</td></tr>
             <tr><td>Time-To-First-Order</td><td>85 Min</td><td>≤10 Min</td><td>Speed To Production</td></tr>
@@ -382,7 +382,7 @@
     <div style="display:flex;gap:28px;flex-wrap:wrap;margin:0 0 36px 0;">
       <div style="flex:1 1 320px;min-width:320px;background:#2B2B2B;border:1px solid rgba(255,255,255,.10);border-radius:18px;padding:36px 28px;text-align:center;">
         <div style="font-family:'Space Grotesk',sans-serif;font-size:44px;font-weight:700;margin-bottom:10px;">+233%</div>
-        <div style="opacity:.95;font-size:18px;letter-spacing:.02em;">Orders/Month <span style="opacity:.8">(600 → 2,000)</span></div>
+        <div style="opacity:.95;font-size:18px;letter-spacing:.02em;">Orders/Month <span style="opacity:.8"></span></div>
         <div style="margin-top:16px;display:flex;justify-content:center;"><img src="assets/side_arrow.svg" alt="" style="width:18px;height:18px;filter:invert(61%) sepia(76%) saturate(430%) hue-rotate(75deg) brightness(95%) contrast(96%);"></div>
       </div>
       <div style="flex:1 1 320px;min-width:320px;background:#2B2B2B;border:1px solid rgba(255,255,255,.10);border-radius:18px;padding:36px 28px;text-align:center;">
